--- a/css/style.css
+++ b/css/style.css
@@ -184,6 +184,27 @@ nav.show ul.grid {
   text-align: center;
 }
 
+/**TOGGLE MENU**/
+.toggle {
+  color: var(--base-color);
+  font-size: 1, 5rem;
+  cursor: pointer;
+}
+
+nav .icon-close {
+  visibility: hidden;
+  opacity: 0;
+
+  position: absolute;
+  right: 1.5rem;
+  /* TRANSITION HERE*/
+}
+
+nav.show div.icon-close {
+  visibility: visible;
+  opacity: 1;
+}
+
 /** HOME **/
 #home {
   overflow: hidden;
