--- a/css/style.css
+++ b/css/style.css
@@ -4,10 +4,10 @@
   padding: 0;
   box-sizing: border-box;
 }
-/*
+
 ul {
   list-style: none;
-}*/
+}
 
 a {
   text-decoration: none;
@@ -68,8 +68,17 @@ body {
   height: 1px;
   background: linear-gradient(
     270deg,
-    hsla(var(--hue), 36%, 52%, 1) 0%,
-    hsla(var(--hue), 65%, 88%, 0.34) 100%
+    hsla(var(--hue), 36%, 52%, 1),
+    hsla(var(--hue), 65%, 88%, 0.34)
+  );
+}
+
+.divider-2 {
+  height: 1px;
+  background: linear-gradient(
+    270deg,
+    hsla(var(--hue), 65%, 88%, 0.34),
+    hsla(var(--hue), 36%, 52%, 1)
   );
 }
 
@@ -86,6 +95,10 @@ body {
 
 .section {
   padding: 5rem 0;
+}
+
+.section .title {
+  margin-bottom: 1rem;
 }
 
 #header {
@@ -123,10 +136,10 @@ nav {
   justify-content: space-between;
   width: 100%;
 }
-/*
+
 nav ul li {
   text-align: center;
-}*/
+}
 
 nav ul li a {
   transition: color 0.3s;
@@ -251,4 +264,42 @@ nav.show div.icon-close {
 
 #home .text p {
   margin-bottom: 2rem;
+}
+
+/**ABOUT**/
+#about {
+  background: white;
+}
+
+#about .container {
+  margin: 0;
+}
+
+#about .image {
+  position: relative;
+}
+
+#about .image::before {
+  content: '';
+  height: 100%;
+  width: 100%;
+  background: var(--base-color-second);
+  position: absolute;
+  top: -8.3%;
+  left: -33%;
+  z-index: 0;
+}
+
+#about .image img {
+  position: relative;
+}
+
+#about .image img,
+#about .image::before {
+  border-radius: 0.25rem;
+}
+
+#about .text {
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
 }
